--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
+    "resend": "^6.7.0",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
