--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,12 @@
-# Strapi API Configuration
 # Copy this file to .env.local and fill in your values
 
+# Site Configuration
+# Full URL of your site (used for sitemap, canonical URLs, Open Graph tags)
+# Development: http://localhost:3000
+# Production: https://xploreturkiye.be
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Strapi API Configuration
 # Strapi API URL (public, used in browser)
 NEXT_PUBLIC_STRAPI_API_URL=http://localhost:1337/api
 
