--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "eslint": "^9.0.0",
     "eslint-config-next": "^16.1.3",
     "postcss": "^8.4.40",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.5.4"
   }
